--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "dependencies": {
     "@paralleldrive/cuid2": "^2.2.2",
+    "@prisma/client": "^6.11.1",
     "axios": "^1.10.0",
     "bullmq": "^5.53.0",
     "class-transformer": "^0.5.1",
@@ -64,6 +65,7 @@
     "knex": "^3.1.0",
     "morgan": "^1.10.0",
     "pg": "^8.13.1",
+    "prisma": "^6.11.1",
     "supertest": "^7.1.1",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
